Fix z-index issues

--- a/styles.css
+++ b/styles.css
@@ -211,6 +211,8 @@ main{
 .dropdownContent{
     opacity: 0;
     pointer-events: none;
+    z-index: 20;
+    position: relative;
 }
 
 .dropdownMenu{
@@ -462,6 +464,7 @@ input[type="checkbox"]{
     letter-spacing: 0.5rem;
     margin: 1.5rem 0;
     color: rgba(255, 230, 129, 0.9);
+    z-index: 0;
 }
 
 #songAccuracy {
@@ -469,6 +472,7 @@ input[type="checkbox"]{
     font-weight: 600;
     margin-top: 1rem;
     transition: transform 0.5s ease;
+    z-index: 0;
 }
 
 #songNotes .note-1 { font-size: 120%; opacity: 1; }
